# umap_plotter_backend

./: .env  .gitignore  bash_script_git  database.py  fastapi_api.py  main.py  pyproject.toml  schema.py
data_management/: embedding.py  expression.py  gene.py  spatial.py
django_backend/: gunicorn.config.py
django_backend/backend/: settings.py  urls.py
django_backend/data_management/: admin.py  models.py  serializers.py  urls.py  views.py
django_backend/data_management/migrations/: 0001_initial.py  0002_gene.py
